Improve v4l2 cameras update logic

The idea is to get rid of extra videoInputsUpdated signals,
which was emitted whenever the '/dev' directory is changed.

Task-number: QTBUG-110071
Change-Id: Ic2675db05eda05ac8355bfca77438bf09cb863bf
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit a8553a1f7f6e434688c162487e60d6a65e28b728)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>